# aocr

./: Cargo.toml  README.md
2019/: five_input.txt
2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  intcode.rs  main.rs
2022/src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  intcode.rs  lib.rs  main.rs
tests/: one_test.rs  tests.rs
