[package]
name = "aocr"
version = "0.1.0"
authors = ["Ian Mason <dormedas@vivaldi.net>"]
edition = "2018"

[lib]
name = "days"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
