[package]
name = "aocr"
version = "0.1.0"
authors = ["Ian Mason <dormedas@vivaldi.net>"]
edition = "2018"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "2019"
path = "2019/src/main.rs"

[[bin]]
name = "2022"
path = "2022/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
